--- a/asset.properties
+++ b/asset.properties
@@ -15,12 +15,14 @@ preservation.content.object.description=
 access.content.object.description=
 preservation.generation.label=
 access.generation.label=
-
-
 [OptionalAssetMetadataSection]
 asset.metadata.namespace=
 asset.metadata.xmlfile=
-
 [OptionalAssetIdentifierSection]
 asset.identifier.key=
 asset.identifier.value=
+[OptionalAPIUploadSection]
+user.domain=
+user.username=
+user.password=
+user.tenant=
